Fixed header search button text bug on Safari

--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -92,6 +92,7 @@
         #search-button {
             font-size: 15px;
             font-family: var.$roboto-font;
+            text-align: center;
             border: none; 
             border-radius: 4px;
             width: 67px;
